docs: Add GitHub repository link to report and README

--- a/latex.tex
+++ b/latex.tex
@@ -156,6 +156,8 @@
     {\Large\bfseries Axel Young\par}
     \vspace{1em}
     {\large Student ID: 2023141520034\par}
+    \vspace{1em}
+    {\large\href{https://github.com/AxelYoung/DE_Project}{GitHub Repository: github.com/AxelYoung/DE\_Project}\par}
 
     % 3. 使用 \vfill 在模块间创建动态的、相等的间距
     \vfill
